<resources>
    <string name="app_name">Wallpaper</string>

    <!-- Exit App String -->
    <string name="exit_app_text">Are You Sure You want to exit</string>

    <!-- Download Image String -->
    <string name="download_image_text">Download Image </string>

    <!-- Share  -->
    <string name="more_actions">More <b>Actions</b></string>

    <!-- Share with firends -->
    <string name="share_with_friends"><b>Share with your friends</b></string>

    <!-- Set As Wallpaper -->
    <string name="set_as_wallpaper">Set As Wallpaper</string>

    <!-- Download Only -->
    <string name="download_only">Download Only</string>

    <!-- Share  -->
    <string name="next">Next</string>

</resources>